...
                obscureText: true,
              ),
              const SizedBox(height: 24),
              // Botones debajo de los campos de texto
              ElevatedButton(
                onPressed: _onClick,
                child: const Text('Registrarme'),
              ),

            ],
          ),
        ),
      ),
...
