...
    });
  }

  Widget _buildSubmodulos(String nivel) {
    final List<Map<String, dynamic>> submodulos = [
      {
        'nombre': 'Simulaciones',
        'icono': Icons.videogame_asset,
        'rimDark': const Color(0xFFB23A2E),
        'rimLight': const Color(0xFFFF9E80),
        'faceDark': const Color(0xFFE53935),
        'faceLight': const Color(0xFFFF8A80),
        'depth': 6.0,
...
                        const SizedBox(height: 40),

                        // PRINCIPIANTES
                        Column(
                          children: [
                            const Text(
                              'PRINCIPIANTES',
                              style: TextStyle(
                                color: Color(0xFF1976D2),
                                fontWeight: FontWeight.bold,
                                fontSize: 16,
                              ),
                            ),
...
